# ark

./: .gitignore  Cargo.toml  README.md  justfile
crates/acp-client/: Cargo.toml
crates/acp-client/src/: lib.rs
crates/ark-core/: Cargo.toml
crates/ark-core/src/: control_socket.rs  engine.rs  lib.rs  orchestrator.rs  socket_paths.rs  status_writer.rs
crates/ark-core/src/consumers/: hook_dispatcher.rs  state_writer.rs  status_pipe.rs
crates/ark-ext-derive/: Cargo.toml
crates/ark-ext-derive/src/: lib.rs
crates/ark-ext-derive/tests/: command_zellij_view_derive.rs  extension_capabilities_derive.rs  view_derive.rs
crates/ark-ext-metadata/: Cargo.toml
crates/ark-ext-metadata-types/: Cargo.toml
crates/ark-ext-metadata-types/src/: lib.rs
crates/ark-ext-metadata-types/tests/: soul_phase2_roundtrip.rs
crates/ark-ext-metadata/src/: lib.rs  search_path.rs  wasm_meta.rs
crates/ark-ext-proto/: Cargo.toml
crates/ark-ext-proto/share/: extension-protocol.kdl
crates/ark-ext-proto/src/: lib.rs  supervision.rs
crates/ark-ext-proto/src/transport/: mod.rs  (+3 more)
crates/ark-ext-proto/tests/: ark_view_reexports.rs  conformance.rs
crates/ark-ext-test-support/: CLAUDE.md  Cargo.toml
crates/ark-ext-test-support/src/: lib.rs
crates/ark-ext-test-support/tests/: subprocess_parity.rs  version_mismatch.rs
crates/ark-host/: Cargo.toml
crates/ark-host/src/: bindings.rs  cache.rs  cap_fns.rs  engine.rs  host_fns.rs  lib.rs  lifecycle.rs  linker_set.rs  loader.rs  store.rs
crates/ark-host/tests/: engine_singleton.rs  epoch_ticker.rs  host_fns_terminal_node.rs  instance_pre_cache.rs  linker_cap_gate.rs  linker_set.rs  lint_forbidden_apis.rs  no_runtime_cap_prompts.rs  wasi_ctx_mapping.rs  wasi_deny_baseline.rs
crates/ark-pane/: Cargo.toml
crates/ark-pane/src/: app.rs  lib.rs
crates/ark-plugin-protocol/: Cargo.toml  README.md  build.rs
crates/ark-plugin-protocol/src/: bus.rs  errors.rs  lib.rs  manifest.rs  target.rs
crates/ark-plugin-protocol/tests/: echo_sections.rs  echo_wit_deps_drift.rs  wit_doc_comments.rs
crates/ark-plugin-protocol/wit/: plugin.wit  widget-tree.wit
crates/ark-plugin-sdk/: Cargo.toml
crates/ark-plugin-sdk/src/: lib.rs
crates/ark-plugin-sdk/tests/: trybuild.rs
crates/ark-render-terminal/: Cargo.toml
crates/ark-render-terminal/src/: lib.rs
crates/ark-test-harness/: Cargo.toml
crates/ark-test-harness/src/: fixtures.rs  lib.rs  pty.rs  zellij.rs
crates/ark-test-harness/tests/: smoke.rs
crates/ark-types/: Cargo.toml
crates/ark-types/src/: env_paths.rs  event.rs  event_bus.rs  id.rs  lib.rs  scope.rs  state_dir.rs  status.rs
crates/ark-view/: CLAUDE.md  Cargo.toml
crates/ark-view/src/: handle.rs  invalidation.rs  lib.rs  lookup.rs  suppression.rs  typed.rs  view.rs
crates/ark-view/tests/: handle_invalidated_wire.rs  stack_dispatcher.rs  trybuild_affordances.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: cli.rs  ctx.rs  embedded.rs  error.rs  exit.rs  id_resolver.rs  lib.rs  main.rs  supervisor_handoff.rs
crates/cli/tests/: cli_help.rs  e2e.rs  launch_integration.rs  launch_pty.rs  scene_e2e.rs  w8_spawn_integration.rs
crates/config/: Cargo.toml
crates/config/src/: ext_sections.rs  hooks.rs  lib.rs  plugins_kdl.rs  schema.rs  url_gate.rs
crates/config/templates/: config.toml
crates/core/: Cargo.toml
crates/core/src/: config.rs  control_socket.rs  engine.rs  engine_contract.rs  events_log.rs  lib.rs  multiplexer.rs  mux_contract.rs  orchestrator.rs  orchestrator_contract.rs  socket_paths.rs  status_writer.rs
crates/engines/claude-code/: Cargo.toml
crates/hook/: Cargo.toml
crates/hook/src/: allow.rs  bridge.rs  cli.rs  event.rs  lib.rs  main.rs  payload.rs  pipe.rs  run.rs  writer.rs
crates/mux/zellij/: Cargo.toml
crates/orchestrators/cavekit/: Cargo.toml
crates/orchestrators/claude-code/: Cargo.toml
crates/plugins/ark-bus/: Cargo.toml
crates/scene/: Cargo.toml  README.md
crates/scene-macros/: CLAUDE.md  Cargo.toml
crates/scene-macros/src/: lib.rs
crates/scene-macros/tests/: smoke.rs
crates/scene/share/: scene.kdl-schema
crates/scene/src/: ast.rs  cache.rs  cap_check.rs  cel.rs  chord.rs  clear.rs  compile.rs  compose.rs  context.rs  cycle.rs  default_scene.kdl  default_scene.rs  default_scene_use_form.kdl  engine.rs  engine_compat.rs  error.rs  handle_types.rs  hook_compat.rs  id.rs  intent.rs  interp.rs  lib.rs  load_order.rs  merge.rs  namespace.rs  parse.rs  path.rs  plugin_compat.rs  plugin_reactions.rs  reactions.rs  reconciler.rs  reload.rs  resolve_path.rs  rhai.rs  scope.rs  selector.rs  shape.rs  suggest.rs  template.rs  use_resolution.rs  (+3 more)
crates/scene/tests/: composition.rs  diagnostics.rs  errors.rs  handles.rs  layout_compile.rs  parse.rs  reconciler.rs  scope.rs  stack.rs  stack_dispatch.rs  view_types_trybuild.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: audit_log.rs  auto_close.rs  bootstrap.rs  commands.rs  control_socket.rs  crash.rs  daemon.rs  engine_resolution.rs  engine_stub.rs  ext_dispatch.rs  ext_loader.rs  ext_verb_dispatch.rs  factory.rs  foreground.rs  host_capabilities.rs  kill.rs  lib.rs  lock.rs  orchestration.rs  permission.rs  plugin_lifecycle.rs  ready_signal.rs  scene_runtime.rs  signals.rs  turn_inflight.rs  user_close_suppression.rs
crates/supervisor/tests/: capability_gate_matrix.rs  manifest_intent_integration.rs  subprocess_tests.rs  suppression_invalidation.rs
crates/test-fixtures/: Cargo.toml  README.md
crates/test-fixtures/claude-code/: CLAUDE.md  Cargo.toml
crates/test-fixtures/src/: lib.rs
crates/test-fixtures/tests/: hook_payloads.rs  integration.rs  mock_claude.rs  transcripts.rs
extensions/claude-code/: CLAUDE.md  Cargo.toml
extensions/claude-code/src/: columns.rs  config.rs  doctor.rs  hook_event.rs  hook_payload.rs  lib.rs  settings_json.rs  socket.rs  transcript.rs  view.rs
extensions/claude-code/tests/: cc_hook_fail_open.rs  claude_code_smoke.rs  handle_type_trybuild.rs  payload_fields.rs  rhai_envelope.rs  scene_compile_hook.rs  settings_reconcile.rs  transcript_missing_dir.rs  view_integration.rs
(+612 files in other folders)
