[workspace]
resolver = "3"
members = [
    "crates/cli",
    "crates/config",
    "crates/core",
    "crates/hook",
    "crates/pane",
    "crates/supervisor",
    "crates/test-fixtures",
    "crates/types",
    "crates/engines/*",
    "crates/orchestrators/*",
    "crates/mux/*",
    "crates/plugins/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["RJM"]
repository = "https://github.com/rlch/ark"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }
nix = { version = "0.29", features = ["fs", "process", "signal", "user"] }
ratatui = "0.29"
crossterm = "0.28"
notify = "7"
ansi-to-tui = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
interprocess = { version = "2.4", features = ["tokio"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
minijinja = "2"
nucleo-matcher = "0.3"
ulid = { version = "1", features = ["serde"] }
thiserror = "2"
anyhow = "1"
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
tempfile = "3"
sha2 = "0.10"
fd-lock = "4"
shlex = "1"

# T-131: wasm release-profile + size-reduction stack (cavekit-distribution
# R3). Aggressive size-optimization settings applied to the shared
# `[profile.release]` so both the `ark-cli` release binary and the
# `wasm32-wasip1` plugin artifacts (ark-plugin-status / ark-plugin-picker)
# shrink for cargo-dist + future browser distribution.
#
# Stack:
#   - opt-level = "z"    size-first LLVM opts (drops ~20-30% vs "3")
#   - lto = "fat"        whole-program LTO across all crates (bigger win
#                        than "thin" on wasm where every intrinsic drop
#                        helps)
#   - codegen-units = 1  single CGU so LTO sees the whole program
#   - strip = true       strip symbols (wasm name section + debug info)
#   - panic = "abort"    no landing pads / unwinding tables — plugins
#                        don't unwind anyway, and the CLI release just
#                        aborts on panic which is fine for a user tool.
#                        Tests still run on debug profile where
#                        `std::panic::catch_unwind` works normally.
#
# `wasm-opt -Oz --enable-bulk-memory` is applied as a postprocess step
# by `crates/cli/build.rs` (opt-in via ARK_BUILD_WASM=1) and by
# `just wasm-opt` when wasm-opt is on PATH — see build.rs module doc.
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
