[workspace]
resolver = "3"
members = [
    # T-ACP.2: ACP (agent-client-protocol) wire client. Spawns engine
    # subprocesses, frames JSON-RPC over stdio, and translates
    # session/update + permission/fs/terminal methods into ark's
    # `AgentEvent::UserEvent` taxonomy. Consumed by supervisor once
    # T-ACP.4a wires it into the per-agent runtime.
    "crates/acp-client",
    "crates/cli",
    "crates/config",
    "crates/core",
    "crates/hook",
    "crates/pane",
    "crates/scene",
    "crates/supervisor",
    "crates/test-fixtures",
    "crates/types",
    # T-9.5.1: extension-protocol trait + request/response types (R16).
    "crates/ark-ext-proto",
    # T-10.1: shared `ExtensionMetadata` type defs (R10). Imported by
    # both plugin-side helper and ark core; lives on its own so changes
    # ripple to every consumer without a cycle.
    "crates/ark-ext-metadata-types",
    # T-10.1 + T-10.3: plugin-side helper + search-path resolver (R10).
    "crates/ark-ext-metadata",
    "crates/engines/*",
    "crates/orchestrators/*",
    "crates/mux/*",
    "crates/plugins/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["RJM"]
repository = "https://github.com/rlch/ark"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt", "compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }
nix = { version = "0.29", features = ["fs", "poll", "process", "signal", "term", "user"] }
ratatui = "0.29"
crossterm = "0.28"
notify = "7"
ansi-to-tui = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
interprocess = { version = "2.4", features = ["tokio"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
minijinja = "2"
nucleo-matcher = "0.3"
ulid = { version = "1", features = ["serde"] }
thiserror = "2"
anyhow = "1"
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
tempfile = "3"
sha2 = "0.10"
fd-lock = "4"
shlex = "1"
# T-0.1 (scene): reactive KDL config stack. facet = reflection-capable derive
# (SHAPE surfaces Rust doc-comments as LSP hover docs); facet-kdl = KDL parser
# that preserves spans through miette diagnostics; kdl = upstream crate used
# for formatter output only (AST parse goes through facet-kdl); miette =
# span-aware error reporting; cel-interpreter = CEL expressions for reaction
# `when=` predicates; minijinja already above, used for scene templating.
facet = "0.42"
facet-kdl = "0.42"
kdl = "6.5"
miette = { version = "7", features = ["fancy"] }
cel-interpreter = "0"
# T-2.3 (scene): RE2-safe glob matcher used by the CEL `glob(str, pattern)`
# custom function. globset patterns are shell-style (`*`, `**`, `?`,
# `[abc]`) and compile to a non-backtracking regex engine, so hostile
# user patterns can't DoS the evaluator. The `matches()` function from
# CEL stdlib already uses RE2-backed `regex`, so no extra ReDoS surface
# is introduced by this crate.
globset = "0.4"
# T-0.5 (scene): blake3 hashes scene file content to produce `SceneId`
# for hot-reload delta detection, `ark scene graph` attribution, and
# compile-cache keying. Used exclusively under `crates/scene/`.
blake3 = "1"
# T-1.3 (scene): Jaro-Winkler similarity for "did you mean …?" typo
# suggestions. Used by `scope.rs` to suggest scene-root node names, by
# the op pass (T-3.x) to suggest op verbs, and by the extension
# resolver (T-2.x) to suggest installed extension names. 0.11 is the
# current stable line; drops no-std support we don't need.
strsim = "0.11"
# T-1.4 (scene): snapshot testing for miette-rendered diagnostics.
# One .kdl fixture per diagnostic scenario; insta snapshots pin the
# exact rendered error text (ANSI-stripped via miette's unicode-nocolor
# theme, so no separate ansi-strip dep is needed). Review snapshots
# with `cargo insta review` (or `INSTA_UPDATE=1 cargo test`).
insta = "1"

# T-10.2 (scene): `wasmparser` walks the wasm payload stream looking for
# the `ark.metadata` custom section emitted by extension authors via
# `#[link_section]`. Pinned to 0.246 — same version chain as
# `wasm-tools`. Strictly no-std-friendly + zero-copy parsing.
wasmparser = "0.246"

# T-10.4 (scene): `semver` parses the `ark-range` / `zellij-range`
# fields on `ExtensionMetadata` for compatibility checks at scene
# compile time. Cargo-style range syntax (`>= 1.2, < 2.0`) ships in
# `semver::VersionReq`.
semver = "1"

# T-10.2 dev (scene): `wat` constructs `(module (@custom "ark.metadata"
# "<kdl>"))` test fixtures so the wasm-meta reader can be exercised
# without a real cartridge build. Same major as the workspace's
# `wasmparser`.
wat = "1"

# T-ACP.1 (cavekit-scene R17, cavekit-distribution R4c): the Agent
# Client Protocol crate is pinned to an equality version so every
# ark build speaks the identical ACP wire format. Ark is a first-
# class ACP client (R17): engines are ACP agents; ark does not
# invent an agent protocol. Version 0.10.4 is the latest stable
# release on crates.io as of ark v0.1.0 and is the version this
# release ships. Bump policy: a minor ACP bump may broaden method
# surface (R16-style MINOR rules apply transitively to ark's ACP
# surface) — treat the pin as the only moving piece and re-run
# the ACP conformance suite before bumping. Not yet added to any
# crate's `[dependencies]`; wiring happens in T-ACP.2.
agent-client-protocol = "=0.10.4"

# T-131: wasm release-profile + size-reduction stack (cavekit-distribution
# R3). Aggressive size-optimization settings applied to the shared
# `[profile.release]` so both the `ark-cli` release binary and the
# `wasm32-wasip1` plugin artifacts (ark-plugin-status / ark-plugin-picker)
# shrink for cargo-dist + future browser distribution.
#
# Stack:
#   - opt-level = "z"    size-first LLVM opts (drops ~20-30% vs "3")
#   - lto = "fat"        whole-program LTO across all crates (bigger win
#                        than "thin" on wasm where every intrinsic drop
#                        helps)
#   - codegen-units = 1  single CGU so LTO sees the whole program
#   - strip = true       strip symbols (wasm name section + debug info)
#   - panic = "abort"    no landing pads / unwinding tables — plugins
#                        don't unwind anyway, and the CLI release just
#                        aborts on panic which is fine for a user tool.
#                        Tests still run on debug profile where
#                        `std::panic::catch_unwind` works normally.
#
# `wasm-opt -Oz --enable-bulk-memory` is applied as a postprocess step
# by `crates/cli/build.rs` (opt-in via ARK_BUILD_WASM=1) and by
# `just wasm-opt` when wasm-opt is on PATH — see build.rs module doc.
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# T-133: cargo-dist release pipeline (cavekit-distribution R2).
# Tag-driven GitHub Releases. The matching `.github/workflows/release.yml`
# fires on `v*` tag pushes and builds the four target tarballs below. The
# metadata lives here so that `cargo dist init` (when run locally in the
# future) will agree with the workflow instead of overwriting it.
#
# Targets: aarch64 + x86_64 on macOS + Linux. No Windows — per R2 and
# cavekit-distribution R4 "No Windows package manager — Windows not a v1
# target". Shell installer lets `cargo binstall` + curl|sh flows work; the
# homebrew installer primes T-134's tap (homebrew-ark).
#
# `pr-run-mode = "plan"` keeps PRs cheap — only the plan step runs; full
# build matrix only triggers on tag push (see release.yml).
[workspace.metadata.dist]
cargo-dist-version = "0.21.0"
ci = ["github"]
# T-134: `homebrew` installer + `tap = "rlch/homebrew-ark"` makes
# cargo-dist push a generated formula to the `rlch/homebrew-ark` tap repo
# on every `v*` release — yielding `brew install rlch/ark/ark` once the
# tap repo + `HOMEBREW_TAP_TOKEN` are wired. See README "Installation"
# section for the one-time bootstrap steps the maintainer must perform.
installers = ["shell", "homebrew"]
tap = "rlch/homebrew-ark"
# Name the formula `ark` (not `ark-cli`) so the install command reads
# `brew install rlch/ark/ark`. cargo-dist uses this as the formula
# filename + the `class` name inside the generated `.rb`.
formula = "ark"
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-gnu",
]
pr-run-mode = "plan"
# SHA256 checksums are cargo-dist's default for published artifacts;
# `checksum = "sha256"` is explicit so the contract doesn't silently
# change if cargo-dist's default ever shifts.
checksum = "sha256"
# `install-path = "CARGO_HOME"` keeps the shell installer's dropped
# binary next to `cargo install`-dropped ones (~/.cargo/bin by default),
# avoiding PATH surprises vs the default `~/.local/bin` target.
install-path = "CARGO_HOME"
