[package]
name = "ark-ext-metadata-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

# T-10.1 (cavekit-scene R10): shared type definitions for
# `ExtensionMetadata` + friends. This crate is IMPORTED BY BOTH the
# plugin-side helper (`ark-ext-metadata`) and ark core (scene compiler,
# `ark ext inspect`). Keeping the types in their own crate guarantees
# one source of truth — editing an `ExtensionMetadata` field here ripples
# to every consumer simultaneously, and avoids a future cycle when
# ark-scene starts reading `extension.kdl` files.
#
# Only derives + `Facet` reflection live here. No filesystem access, no
# KDL parsing, no macros — those belong in `ark-ext-metadata`.
[dependencies]
facet = { workspace = true }
# `facet-kdl` is pulled in only for the `#[facet(kdl::child)]` attribute
# applied to `ExtensionManifest::extension` — the macro needs the `kdl`
# module in scope when it expands. No parsing / serializing happens in
# this crate; the runtime round-trip helpers live in `ark-ext-metadata`.
facet-kdl = { workspace = true }
