[package]
name = "ark-ext-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

# T-9.5.1 (cavekit-scene R16): canonical Rust `ArkExtension` trait plus the
# request/response structs that define the runtime-RPC wire contract
# (JSON-RPC 2.0 for subprocess / wit-bindgen for wasm-component / in-process
# trait-object dispatch for compiled-in extensions). Every struct derives
# `Facet` so the same SHAPE reflection that ark uses for scene KDL can
# generate a canonical JSON-Schema for foreign-language extension authors
# (R16 "protocol-first, trait-derived"). No network, tokio, or IO deps here
# — this crate is the pure-contract surface; transports live elsewhere.
[dependencies]
# T-9.5.1: `facet` drives SHAPE reflection on every request/response type
# so ark's future ext-host can emit a canonical JSON-Schema per method
# (R16 "protocol-first, trait-derived"). `async-trait` lets the trait
# stay object-safe with async methods on stable Rust. `thiserror` owns
# the `ExtensionError` variant wiring. `serde` is pulled in so downstream
# wasm / subprocess shims can round-trip opaque JSON payloads via their
# own serde path — this crate itself does not serialize with serde, but
# re-exporting it here via workspace dep keeps compile-tested versions
# aligned.
facet = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
# T-9.5.3 (cavekit-scene R16): JSON-RPC 2.0 wire encoding for the NDJSON
# transport. Envelopes (`Request` / `Response` / `Notification`) serialize
# through `serde_json`, and typed request/response payloads round-trip as
# `serde_json::Value` so in-flight cancellation + id-correlation stays at
# the JSON layer without per-method wire code.
serde_json = { workspace = true }
# T-9.5.3: async runtime for NDJSON read/write loops + `oneshot` channels
# for id-correlated response routing. `process` feature is needed so the
# subprocess helper can spawn `tokio::process::Command` with piped stdio.
tokio = { workspace = true }
# T-9.5.3: `futures::future::select` drives the timeout-vs-response race
# inside `NdjsonClient::call`. Already pulled in transitively by
# tokio-util elsewhere in the workspace — declaring it here keeps this
# crate's deps explicit.
futures = { workspace = true }
# T-9.5.7: `nix` issues SIGTERM / SIGKILL during the
# `ExtSupervisor::shutdown` ladder. Tokio's `Child::kill` only sends
# SIGKILL — we need SIGTERM as the middle escalation step. Posix-only
# signals are guarded behind `#[cfg(unix)]` in `supervision.rs`.
nix = { workspace = true }
# T-001 (soul phase 2 cavekit R1): typed `Handle` surface lives in
# `ark-view`. Re-exports + protocol use sites land in T-017; this dep
# edge is added up-front so the workspace DAG is stable.
ark-view = { path = "../ark-view" }
# T-020 (soul phase 2 ext-surface R1): OnSessionEndRequest carries
# `ark_types::event::ExitReason` + OnSessionStartRequest carries
# `ark_types::SessionSpec`. No cycle — ark-types depends only on
# stdlib + serde + chrono + tokio (grep confirms zero ark-ext-proto
# reference in types/Cargo.toml). Supersedes the "intentionally does
# NOT depend on ark-types" note in supervision.rs:16 (stale from v0.1
# when ark-types was broader).
ark-types = { path = "../types" }
# T-039 (soul phase 2 cavekit-tests R3): `ExtensionClient::handshake`
# emits a `tracing::warn!` when the extension reports a newer MINOR
# version than the client (same MAJOR, best-effort mode per R16's
# 3-tier version policy). Zero-cost when no subscriber is installed.
tracing = { workspace = true }

[[bin]]
# T-9.5.2 (cavekit-scene R16): canonical extension-protocol.kdl emitter.
# Walks the `ArkExtension` method table + every request/response type in
# `lib.rs` via facet SHAPE reflection and writes
# `share/extension-protocol.kdl` — the ark-side analog of JSON-Schema,
# shipped as the cross-language reference. CI diffs regenerated output
# against the committed file to catch protocol drift.
name = "gen-extension-spec"
path = "src/bin/gen-extension-spec.rs"

[dev-dependencies]
tokio = { workspace = true }
# T-9.5.9: `paste` powers the `both_transports!` macro in the
# conformance suite that produces one `#[tokio::test]` per
# (case, transport) pair — token concatenation can't be done in
# stable Rust without a proc-macro helper.
paste = "1"
