[package]
name = "ark-ext-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false # test-support crate — never publish

# T-037 (soul phase 2 cavekit-tests R1): stub `ArkExtension` harness used
# by Phase 2 conformance tests. Crate-level isolation: production crates
# (ark-supervisor, ark-cli, …) may depend on this ONLY under
# `[dev-dependencies]`. Not reachable from any release binary.

[dependencies]
ark-ext-proto = { path = "../ark-ext-proto" }
ark-ext-metadata-types = { path = "../ark-ext-metadata-types" }
ark-types = { path = "../types" }
ark-view = { path = "../ark-view" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

# T-038 (soul phase 2 cavekit-tests R2): NDJSON subprocess variant of
# the R1 stub. The `ark-stub-ext` bin uses `NdjsonServer::serve` from
# `ark-ext-proto` to pump stdin→StubExtension→stdout. Configuration is
# read from env vars at startup (see `src/bin/ark-stub-ext.rs` doc).
[[bin]]
name = "ark-stub-ext"
path = "src/bin/ark-stub-ext.rs"

[dev-dependencies]
# Self-tests only — tokio already pulled via `[dependencies]` above.
