[package]
name = "ark-ext-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false # test-support crate — never publish

# T-037 (soul phase 2 cavekit-tests R1): stub `ArkExtension` harness used
# by Phase 2 conformance tests. Crate-level isolation: production crates
# (ark-supervisor, ark-cli, …) may depend on this ONLY under
# `[dev-dependencies]`. Not reachable from any release binary.

[dependencies]
ark-ext-proto = { path = "../ark-ext-proto" }
ark-ext-metadata-types = { path = "../ark-ext-metadata-types" }
ark-types = { path = "../types" }
ark-view = { path = "../ark-view" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

# T-038 (soul phase 2 cavekit-tests R2): NDJSON subprocess variant of
# the R1 stub. The `ark-stub-ext` bin uses `NdjsonServer::serve` from
# `ark-ext-proto` to pump stdin→StubExtension→stdout. Configuration is
# read from env vars at startup (see `src/bin/ark-stub-ext.rs` doc).
[[bin]]
name = "ark-stub-ext"
path = "src/bin/ark-stub-ext.rs"

[dev-dependencies]
# Self-tests only — tokio already pulled via `[dependencies]` above.
# T-039 (soul phase 2 cavekit-tests R3): version-mismatch matrix test
# attaches a `tracing_subscriber::Layer` to capture the WARN emitted on
# the client-older / ext-newer MINOR row. `futures` runs the handshake
# future on the current thread inside `with_default(subscriber, …)` so
# the thread-scoped subscriber observes the event (tokio's `block_on`
# swaps the thread-local dispatcher across its boundary).
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
