[package]
name = "ark-host"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

# T-PP-004 (cavekit-plugin-protocol R1): wasmtime-based runtime
# substrate. Tier 3A (T-PP-025..T-PP-030) wires the Engine singleton,
# per-plugin Store<PluginCtx>, default-deny WasiCtx helper, and the
# forbidden-api lint. Real wasmtime deps pinned in workspace root
# (T-PP-007): wasmtime 43 w/ component-model + async; wasmtime-wasi 43.
# Other modules (linker_set, loader, lifecycle, cache) remain Tier 0
# stubs until Tier 3B+ (T-PP-031+).

[dependencies]
ark-plugin-protocol = { path = "../ark-plugin-protocol" }
ark-types = { path = "../types" }
thiserror = { workspace = true }
# T-PP-025..T-PP-030: wasmtime runtime substrate. component-model + async
# come from workspace feature set. Fuel is explicitly NOT enabled.
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

[dev-dependencies]
# T-PP-026/T-PP-027: async runtime for the epoch-ticker + singleton tests.
tokio = { workspace = true }
